--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,10 +16,10 @@ export(sensitivity.sigma2)
 export(sensitivity.xi)
 export(sim_lgcp_multi)
 importFrom(RandomFields,RFsimulate)
-importFrom(spatstat,closepairs)
-importFrom(spatstat,crosspairs)
-importFrom(spatstat,is.im)
-importFrom(spatstat,is.ppp)
+importFrom(spatstat.geom,closepairs)
+importFrom(spatstat.geom,crosspairs)
+importFrom(spatstat.geom,is.im)
+importFrom(spatstat.geom,is.ppp)
 importFrom(stats,aggregate)
 importFrom(stats,optim)
 importFrom(stats,runif)
